--- a/bleach.fish/package.json
+++ b/bleach.fish/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/node": "^22.10.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
@@ -30,7 +31,7 @@
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.11"
   },
-"engines": {
+  "engines": {
     "node": ">=18.18.0"
   }
 }
